Last changes from lab(4.12)